fix: datepicker z-index 🔨

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -162,9 +162,9 @@ body {
 }
 
 .block {
-  filter: drop-shadow(0px 16px 24px rgba(55, 0, 99, 0.1));
-
-  @apply bg-white border border-2 border-white rounded-3xl;
+  box-shadow: 0px 16px 24px rgba(55, 0, 99, 0.1);
+  @apply bg-white border border-2 border-white
+    rounded-3xl;
   &--contrast {
     @apply bg-primaryClearBg rounded-3xl px-8 py-7;
 
@@ -181,6 +181,8 @@ body {
   &.bg-whitePurple {
     background: #faf3ff;
   }
+
+  // filter: drop-shadow(0px 16px 24px rgba(55, 0, 99, 0.1));
 }
 
 .title {
